--- a/src/styles/WelcometxtStyle.css
+++ b/src/styles/WelcometxtStyle.css
@@ -1,5 +1,5 @@
 .typewriter-text {
-  font-size: 50px;
+  font-size: 2.5rem;
   overflow: hidden;
   border-right: .15em solid orange;
   white-space: nowrap;
